contrast colors fixed

--- a/project/styles/site.css
+++ b/project/styles/site.css
@@ -1,9 +1,9 @@
 /* General Styles */
 :root {
-    --primary-color: #017cff;
-    --secondary-color:#FFC107;
-    --background-color: #FFFFFF;
-    --text-color: #333333;
+    --primary-color: #0d57a5;
+    --secondary-color:#D89E00;
+    --background-color: white;
+    --text-color: black;
     --text-color2:white;
     --font-family: 'Poppins', sans-serif;
     --font-family2: 'Roboto', sans-serif;
@@ -131,7 +131,7 @@ nav ul li a:hover {
     padding: 40px 20px;
     gap: 15rem;
     text-align: left;
-    background-color: #f8f9fa; 
+    background-color: #F5F5F5; 
 }
 
 .intro-image {
@@ -292,8 +292,8 @@ nav ul li a:hover {
 }
 
 .community .cta-button {
-    background-color: var(--secondary-color);
-    color: var(--text-color);
+    background-color: white;
+    color: black;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
@@ -314,7 +314,7 @@ footer {
     text-align: center;
     padding: 40px 20px;
     background: linear-gradient(to right, var(--primary-color), var(--secondary-color)); 
-    color: var(--text-color2);
+    color: var(--background-color);
     border-radius: 10px;
     margin: 30px auto;
     max-width: 900px;
